tests/ui/imports/ambiguous-panic-globvsglob.stderr
error[E0659]: `panic` is ambiguous
  --> $DIR/ambiguous-panic-globvsglob.rs:17:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic-globvsglob.rs:11:9
   |
LL |     use m1::*;
   |         ^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
note: `panic` could also refer to the macro imported here
  --> $DIR/ambiguous-panic-globvsglob.rs:12:9
   |
LL |     use m2::*;
   |         ^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate

warning: `panic` is ambiguous
  --> $DIR/ambiguous-panic-globvsglob.rs:17:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #147319 <https://github.com/rust-lang/rust/issues/147319>
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic-globvsglob.rs:11:9
   |
LL |     use m1::*;
   |         ^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
note: `panic` could also refer to a macro from prelude
  --> $SRC_DIR/std/src/prelude/mod.rs:LL:COL
   = note: `#[warn(ambiguous_panic_imports)]` (part of `#[warn(future_incompatible)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0659`.
